Improved login visuals

--- a/py/src/core/data/config.json
+++ b/py/src/core/data/config.json
@@ -3,5 +3,6 @@
   "db_user": "infoglalo",
   "db_pwd": "jelszo",
   "db_url": "leopph.tplinkdns.com/xe",
-  "db_encoding": "UTF-8"
+  "db_encoding": "UTF-8",
+  "font": "Ebrima"
 }
